--- a/Assets/style.css
+++ b/Assets/style.css
@@ -75,25 +75,28 @@ header nav ul li {
 
 /* makes sure the header stacks correctly below 700px */
 @media screen and (max-width: 700px) {
-    
+    /* centers header full screen for smaller screens */
     header {
+        height: 100vh;
+        width: 100%;
+        padding-top: 25vh;
+        padding-left: 0vh;
         display: flex;
         flex-direction: column;
         margin-bottom: var(--spaceBetween);
-        padding: 3%;
         font-family: 'Times New Roman', Times, serif;
         background-color: var(--dark);
         color: var(--highlight);
-        justify-content: space-between;
+        text-align: center;
     
     }
     
     nav {
+        /* this is distance from intro element */
         border-top: 0;
         margin-top: 0;
-        padding-top: 0%;
-        padding-left: 0%;
-        justify-content: space-between;
+        padding-top: 50%;
+        padding-left: 18%;
     }
     
     header nav ul {
