--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,8 +1,9 @@
 
 /* Overall Style */
+/* css variables to control overall theme of page */
 :root {
     --dark: darkslategrey;
-    --secondaryDark: navy; 
+    --secondaryDark: slategrey; 
     --highlight: orange;
     --light: white;
     --spaceBetween: .5%;
@@ -113,14 +114,23 @@ header nav ul li {
 }
 
 /* About Section styling */
+/* 
+#about-me-banner {
+    width: 100%;
+    height: 100px;
+    background-image: url("./Banner.png");
+} */
 
 #about {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     margin-bottom: .5%;
+    width: 100%;
+    height: 20vh;
+    background-image: url("./Banner.png");
     background-color: var(--secondaryDark);
-    color: var(--light);
+    color: var(--highlight);
 }
 
 #about h2 {
@@ -141,11 +151,12 @@ header nav ul li {
 
 /* makes sure the about me section displays in a centered collumn */
 @media screen and (max-width: 700px) {
-    
+
     #about {
         display: flex;
         flex-direction: column;
         margin-bottom: .5%;
+        background-image: url("./Banner.png");
         background-color: var(--secondaryDark);
         color: var(--light);
     }
@@ -261,7 +272,7 @@ footer ul {
     width: 100%;
     justify-content: center;
     list-style-type: none;
-    background-color: var(--dark);
+    background-image: url("./Banner.png");
     color: var(--highlight);
 }
 
