--- a/Assets/style.css
+++ b/Assets/style.css
@@ -6,7 +6,7 @@
     --secondaryDark: slategrey; 
     --highlight: orange;
     --light: white;
-    --spaceBetween: .5%;
+    --spaceBetween: 2pt;
     --headerSpacing: %;
 }
 
@@ -125,7 +125,7 @@ header nav ul li {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    margin-bottom: .5%;
+    margin-bottom: var(--spaceBetween);
     width: 100%;
     height: 20vh;
     background-image: url("./Banner.png");
@@ -168,6 +168,7 @@ header nav ul li {
 }
 /* Portfolio Styling */
 
+
 #portfolio {
     display: flex;
     padding: 10%;
@@ -176,10 +177,14 @@ header nav ul li {
 }
 
 #portfolio h2 {
-    margin: auto;
-    min-height: auto;
-    min-width: 100px;
-    font-size: x-large;
+    width: 20%;
+    border-width: 5px;
+    display: flex;
+    justify-content: center;
+    border: 5px;
+    border-color: var(--highlight);
+    border-style: solid;
+    align-items: center;
     border-color: var(--highlight);
     background-color: var(--dark);
     color: var(--light);
@@ -189,7 +194,6 @@ header nav ul li {
     display: flex;
     flex-wrap: wrap;
     float: right;
-    margin-left: 5%;
     list-style-type: none;
     justify-content: space-evenly;
 }
@@ -198,7 +202,7 @@ header nav ul li {
     height: auto;
     width: auto;
     min-height: 400px;
-    min-width: 400px;
+    min-width: 500px;
     margin: 3%;
     margin-block-end:3%;
     padding: 20px;
@@ -228,17 +232,18 @@ header nav ul li {
     #portfolio {
         display: flex;
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
         padding: 10%;
         background-color: var(--dark);
         font-family: 'Times New Roman', Times, serif;
     }
     
     #portfolio h2 {
-        margin: .5%;
-        min-height: auto;
+        border-width: 5px;
+        border: 5px;
         text-align: center;
-        min-width: auto;
-        font-size: x-large;
+        border-style: solid;
         border-color: var(--highlight);
         background-color: var(--dark);
         color: var(--light);
@@ -247,17 +252,13 @@ header nav ul li {
     #portfolio ul {
         display: flex;
         flex-direction: column;
-        margin-left: 5%;
         list-style-type: none;
-        justify-content: space-evenly;
+        width: 100%;
     }
     
     .portfolio-card {
-        height: auto;
-        width: auto;
         min-height: 400px;
         min-width: auto;
-        margin-block-end:3%;
         padding: 20px;
         background-color: var(--secondaryDark);
     }
