--- a/Assets/style.css
+++ b/Assets/style.css
@@ -86,6 +86,8 @@ header nav ul li {
     float: right;
 }
 
+
+
 /* makes sure the header stacks correctly below 700px */
 @media screen and (max-width: 700px) {
     /* centers header full screen for smaller screens */
@@ -146,13 +148,11 @@ header nav ul li {
 
 }
 
+
+
 /* About Section styling */
-/* 
-#about-me-banner {
-    width: 100%;
-    height: 100px;
-    background-image: url("./Banner.png");
-} */
+
+
 
 #about {
     display: flex;
@@ -243,13 +243,16 @@ header nav ul li {
 }
 
 .portfolio-card {
-    height: auto;
-    width: auto;
-    min-height: 400px;
-    min-width: 400px;
+    height: 33vh;
+    width: 33vw;
     margin-block-end:3%;
     padding: 10px;
     background-color: var(--secondaryDark);
+}
+
+.portfolio-card p a img {
+    height: 100%;
+    width: 100%;
 }
 
 .portfolio-card h3 {
@@ -264,9 +267,19 @@ header nav ul li {
     color: var(--light);
 }
 
+
 #first-project {
-    width: 90vw;
+    width: 83vw;
+    /* background-image: url('/Assets/placeholder.jpg'); */
 }
+
+
+
+/* Individual project element style */
+
+
+
+
 /* Change Portfolio style when smaller than 700px */
 
 @media screen and (max-width: 700px) {
@@ -319,6 +332,7 @@ header nav ul li {
         padding: auto;
         background-color: var(--secondaryDark);
     }
+
 
     #first-project {
         min-width: 100vw;
