--- a/Assets/style.css
+++ b/Assets/style.css
@@ -235,6 +235,7 @@ header nav ul li {
 
 #portfolio ul {
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
@@ -242,17 +243,51 @@ header nav ul li {
     justify-content: space-evenly;
 }
 
-.portfolio-card {
-    height: 33vh;
-    width: 33vw;
-    margin-block-end:3%;
-    padding: 10px;
-    background-color: var(--secondaryDark);
+/* below are the styling elements inside of a portfolio card
+turn on border styles to see the groupings */
+#portfolio ul li {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    /* border-style: solid; */
 }
 
-.portfolio-card p a img {
-    height: 100%;
+.portfolioWordSplash {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* border-style: dashed; */
+    width: 35%;
+}
+
+.imagePlacement {
+    float: right;
+    justify-content: center;
+    align-items: center;
+    /* border-style: dashed; */
+    /* border-color: bisque; */
+    object-fit: contain;
+    height: 80%;
+    width: 60%;
+}
+
+.imagePlacement img {
+    object-fit: contain;
     width: 100%;
+    float: right;
+}
+/* end where manipulate inside of each project */
+
+.portfolio-card {
+    display: flex;
+    flex-direction: row;
+    width: 20vw;
+    margin-bottom: 3%;
+    /* margin-block-end:3%; */
+    padding: 10px;
+    background-color: var(--secondaryDark);
 }
 
 .portfolio-card h3 {
@@ -267,16 +302,11 @@ header nav ul li {
     color: var(--light);
 }
 
-
+/* makes first project the largest */
 #first-project {
     width: 83vw;
     /* background-image: url('/Assets/placeholder.jpg'); */
 }
-
-
-
-/* Individual project element style */
-
 
 
 
@@ -297,9 +327,11 @@ header nav ul li {
         padding: 10%;
         background-color: var(--dark);
         font-family: 'Times New Roman', Times, serif;
+        /* border-style: solid; */
     }
 
-    /* #portfolio h2 {
+    #portfolio h2 {
+        width: 100%;
         border-width: 5px;
         border: 5px;
         text-align: center;
@@ -307,25 +339,20 @@ header nav ul li {
         border-color: var(--highlight);
         background-color: var(--dark);
         color: var(--light);
-    } */
+    }
     
     #portfolio ul {
         display: flex;
         flex-direction: column;
         list-style-type: none;
-
-        min-width: 100vw;
-        min-height: 100%;
+        /* border-style: solid; */
     }
-
-    /* #portfolio ul li {
-        margin: 1%;
-    } */
 
     .portfolio-card {
         /* margin-block-end:3%; */
         display: flex;
         flex-direction: column;
+        align-items: center;
         flex-shrink: 1;
         min-width: 100vw;
         min-height: 100%;
@@ -335,11 +362,8 @@ header nav ul li {
 
 
     #first-project {
-        min-width: 100vw;
-        min-height: 100%;
+        width: auto;
     }
-}
-
 /* footer style */
 
 
