--- a/Assets/style.css
+++ b/Assets/style.css
@@ -7,7 +7,7 @@
     --highlight: orange;
     --light: white;
     --spaceBetween: 2pt;
-    --headerSpacing: %;
+    --headerSpacing: 2.5%;
 }
 
 
@@ -33,14 +33,15 @@ header {
     justify-content: center;
     align-items: center;
     margin-bottom: var(--spaceBetween);
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Ultra', serif;
+    font-weight: 20;
     background-color: var(--dark);
 
 }
 
 header div img {
     /* profile picture style */
-    height: 10vh;
+    height: 20vh;
     width: 100%;
     border-radius: 100%;
     padding: 10pt;
@@ -57,7 +58,7 @@ header div img {
 }
 
 header h1 {
-    font-size: 50px;
+    font-size: 100px;
     color: var(--highlight);
     margin-top: var(--headerSpacing);
     margin-bottom: var(--headerSpacing);
@@ -65,9 +66,13 @@ header h1 {
 
 header h2 {
     color: var(--light);
+    font-size: 30px;
 }
 
 nav {
+    font-family: 'Ultra', serif;
+    font-size: 25px;
+    text-decoration: none;
     border-top: 0;
     margin-top: 0;
     padding-top: 0%;
@@ -82,7 +87,7 @@ header nav ul {
 
 header nav ul li {
     color: var(--light);
-    padding: 10px;
+    padding: 20px;
     float: right;
 }
 
@@ -101,7 +106,7 @@ header nav ul li {
         justify-content: center;
         text-align: center;
         margin-bottom: var(--spaceBetween);
-        font-family: 'Times New Roman', Times, serif;
+        font-family: 'Ultra', serif;
         background-color: var(--dark);
         color: var(--highlight);
     
@@ -221,8 +226,11 @@ header nav ul li {
     font-family: 'Times New Roman', Times, serif;
 }
 
-#portfolio h2 {
-    width: 20%;
+#portfolio h2, h3 {
+    font-family: 'Ultra', serif;
+    font-size: 20px;
+    font-weight: 20;
+    width: 100%;
     border-width: 5px;
     display: flex;
     justify-content: center;
@@ -370,6 +378,9 @@ turn on border styles to see the groupings */
 
 
 footer ul {
+    font-family: 'Ultra', serif;
+    font-weight: lighter;
+    font-size: 20;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
