--- a/Assets/style.css
+++ b/Assets/style.css
@@ -6,6 +6,7 @@
     --secondaryDark: slategrey; 
     --highlight: orange;
     --light: white;
+    --normal: black;
     --spaceBetween: 2pt;
     --headerSpacing: 2.5%;
 }
@@ -72,7 +73,6 @@ header h2 {
 nav {
     font-family: 'Ultra', serif;
     font-size: 25px;
-    text-decoration: none;
     border-top: 0;
     margin-top: 0;
     padding-top: 0%;
@@ -91,6 +91,10 @@ header nav ul li {
     float: right;
 }
 
+nav a {
+    color: var(--light);
+    text-decoration: none;
+  }
 
 
 /* makes sure the header stacks correctly below 700px */
@@ -160,29 +164,36 @@ header nav ul li {
 #about {
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
+    flex-direction: column;
+    font-family: 'Ultra', serif;
+    font-size: 25px;
+    font-weight: lighter;
     margin-bottom: var(--spaceBetween);
     width: 100%;
-    height: 20vh;
+    height: 10vh;
     background-image: url("./Banner.png");
     background-color: var(--secondaryDark);
-    color: var(--highlight);
+
 }
 
 #about h2 {
     padding: 10px;
+    text-align: center;
+    color: var(--highlight)
 }
 
 #about ul {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-around;
     list-style: none;
-    padding: 10px;
+    padding: 1.5vh;
 }
 
 #about ul li{
     margin-left: 10px; 
     margin-right: 10px;
+    color: var(--normal);
 }
 
 
