--- a/Assets/style.css
+++ b/Assets/style.css
@@ -237,11 +237,11 @@ nav a {
     font-family: 'Times New Roman', Times, serif;
 }
 
-#portfolio h2, h3 {
+#portfolio h2 {
     font-family: 'Ultra', serif;
     font-size: 20px;
     font-weight: 20;
-    width: 100%;
+    width: 20%;
     border-width: 5px;
     display: flex;
     justify-content: center;
@@ -252,6 +252,24 @@ nav a {
     background-color: var(--dark);
     color: var(--light);
 }
+
+#portfolio h3 {
+    font-family: 'Ultra', serif;
+    vertical-align: top;
+    font-size: 15px;
+    font-weight: 1;
+    width: 120%;
+    border-width: 1px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 5px;
+    border-style: solid;
+    border-color: var(--highlight);
+    background-color: var(--dark);
+    color: var(--light);
+}
+
 
 #portfolio ul {
     display: flex;
@@ -278,6 +296,7 @@ turn on border styles to see the groupings */
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 5%;
     /* border-style: dashed; */
     width: 35%;
 }
